# SocNav3-simdata-generator

./: README.md  checkjson.py  generate_trajectories.py  mainUI.py  mainUI.ui  playall.sh  remove_walls.py  run_V2.sh  schema.json  simulator_V2.sh  socnavgym_conf.yaml  split_all.sh  split_multigoal.py  split_multigoal_parallel.py  view_data.py
SACSoN_processing/: add_goal_thresholds_to_SACSoN.py  add_objects_walls_to_SACSoN.py  generate_json_with_objects_SACSoN.py  split_scenario.py
controller_V2/src/: Makefile  bytesequencepublisherI.py  controller.py  genericworker.py  goalpublisherI.py  interactiondetectorI.py  joystickadapterI.py  mainUI.ui  objectdetectorI.py  peopledetectorI.py  specificworker.py  ui_mainUI.py  walldetectorI.py
data_analysis/: 1_remove_dupes.py  2_show_data.py  3_check_quality.py
rcnode/: rcnode.conf  rcnode.sh
simulator/etc/: config  config_V2  socnavgym_conf.yaml
simulator/src/: genericworker.py  simulator.py  specificworker.py
trajectory/: CMakeLists.txt  qt.cmake
trajectory/etc/: config  config_GMM  config_V2
trajectory/src/: CMakeLists.txt  CMakeListsSpecific.txt  genericmonitor.cpp  genericmonitor.h  genericworker.cpp  genericworker.h  main.cpp  specificmonitor.cpp  specificworker.cpp  specificworker.h
utils/: augment_data_with_walls_configurations.py  check_person_close_to_goal.py  check_single_goal_in_json.py  rotate_view_point.py
